--- a/main/assets/starman.html
+++ b/main/assets/starman.html
@@ -10,6 +10,24 @@
     </head>
     <body>
         <h1>Starman</h1>
-        <input id="play-button" type="button" onclick="play_button()" value="Play">
+        <table>
+          <tr>
+            <th>Theme</th>
+            <th>Lives</th>
+            <th>Level</th>
+            <th>State</th>
+            <th>Brightness</th>
+          </tr>
+          <tr>
+             <td><select><option value='smb'>SMB</select></select></td>
+             <td><span id="lives"></span></td>
+             <td><span id="level"></span></td>
+             <td><span id="state"></span></td>
+             <td><input type="range" min="1" value="0" max="50" id="brightness"></td>
+          </tr>
+        </table>
+
+        <div id="play"><input id="play-button" type="button" onclick="play_button()" value="Play"></div>
+        <div id="version">Firmware: <span id='firmware'></span></div>
     </body>
 </html>
