Minor formatting fixes for internal web page

--- a/main/assets/starman.html
+++ b/main/assets/starman.html
@@ -10,6 +10,11 @@
     </head>
     <body>
         <h1>Starman</h1>
+        <div class=pages>
+            <a href='/'>Play</a>
+            <a href='/wifi'>Wifi</a>
+            <a href='/about.html'>About</a>
+        </div>
         <table>
           <tr>
             <th>Theme</th>
