--- a/main/assets/about.html
+++ b/main/assets/about.html
@@ -4,7 +4,7 @@
         <title>Starman</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
         <meta name="apple-mobile-web-app-capable" content="yes" />
-        <link rel="stylesheet" type="text/css" href="/starman.css" />
+        <link rel="stylesheet" type="text/css" href="/style.css" />
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
         <script src="/starman.js" type="text/javascript"></script>
     </head>
