Clarified only the led1642gw.c driver from rgbyteclock was used as a basis for led1642gw.c in this codebase

--- a/main/assets/about.html
+++ b/main/assets/about.html
@@ -27,7 +27,7 @@
         See the License for the specific language governing permissions and
         limitations under the License.</p>
         <p><a href='https://starman.array.org'>https://starman.array.org</a></p>
-        <p>Starman uses third-party code licensed from the following libraries/projects:</p>
+        <p>Starman uses third-party Open Source code from the following libraries/projects:</p>
         <ul>
             <li>Espressif IoT Development Framework - Apache License 2.0<br>
                 <a href='https://docs.espressif.com/projects/esp-idf'>https://docs.espressif.com/projects/esp-idf</a>
@@ -35,8 +35,8 @@
             <li>PlayTune by Len Shustek - MIT License<br>
                 <a href='https://github.com/LenShustek/arduino-playtune'>https://github.com/LenShustek/arduino-playtune</a>
             </li>
-            <li>rgbyteclock by Stefan Rupp - Beer-ware License<br>
-                <a href='https://git.struppi.name/struppi/rgbyteclock-code'>https://git.struppi.name/struppi/rgbyteclock-code</a>
+            <li>led1642gw.c driver from rgbyteclock by Stefan Rupp - Beer-ware License<br>
+                <a href='https://git.struppi.name/struppi/rgbyteclock-code/src/branch/master/led1642gw.c'>https://git.struppi.name/struppi/rgbyteclock-code/src/branch/master/led1642gw.c</a>
             </li>
             <li>esp32-wifi-manager by Tony Pottier - MIT License<br>
                 <a href='https://github.com/tonyp7/esp32-wifi-manager'>https://github.com/tonyp7/esp32-wifi-manager</a>
