CSS updates to make the controlling webpage look nicer

--- a/main/assets/about.html
+++ b/main/assets/about.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
     <head>
-        <title>Starman</title>
+        <title>Starman - About</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
         <meta name="apple-mobile-web-app-capable" content="yes" />
         <link rel="stylesheet" type="text/css" href="/style.css" />
@@ -12,8 +12,8 @@
         <h1>Starman</h1>
         <div class=pages>
             <a href='/'>Play</a>
-            <a href='/wifi'>Wifi</a>
-            <a href='/about.html'>About</a>
+            <a href='/wifi/'>Wifi</a>
+            <a class='selected' href='/about.html'>About</a>
         </div>
         <p>&copy; 2022 Adam McDaniel</p>
         <p>Licensed under the Apache License, Version 2.0 (the "License");
