--- a/main/assets/index.html
+++ b/main/assets/index.html
@@ -11,8 +11,8 @@
     <body>
         <h1>Starman</h1>
         <div class=pages>
-            <a href='/'>Play</a>
-            <a href='/wifi'>Wifi</a>
+            <a class='selected' href='/'>Play</a>
+            <a href='/wifi/'>Wifi</a>
             <a href='/about.html'>About</a>
         </div>
         <table>
