Get/set brightness from web app to led1642gw and save value to NVS storage
If brightness is set to -1, use the photocell to set brightness relative
to ambient light.

--- a/main/assets/index.html
+++ b/main/assets/index.html
@@ -28,7 +28,7 @@
              <td><span id="lives"></span></td>
              <td><span id="level"></span></td>
              <td><span id="state"></span></td>
-             <td><input type="range" min="1" value="0" max="50" id="brightness"></td>
+             <td><input type="range" min="1" value="0" max="50" id="brightness" onchange="set_brightness()"></td>
           </tr>
         </table>
 
