Get/set firmware update track
Firmware can follow either the stable, testing, or unstable tracks

--- a/main/assets/index.html
+++ b/main/assets/index.html
@@ -33,6 +33,6 @@
         </table>
 
         <div id="play"><input id="play-button" type="button" onclick="play_button()" value="Play"></div>
-        <div id="version">Firmware: <span id='firmware'></span></div>
+        <div id="version">Firmware: <span id='fw-version'></span> (<span id='fw-track'></span>)</div>
     </body>
 </html>
