Get/set the game theme via HTTP GET/POST

--- a/main/assets/index.html
+++ b/main/assets/index.html
@@ -24,7 +24,7 @@
             <th>Brightness</th>
           </tr>
           <tr>
-             <td><select><option value='smb'>SMB</select></select></td>
+             <td><select id='select-theme' onchange="set_theme()"></select></td>
              <td><span id="lives"></span></td>
              <td><span id="level"></span></td>
              <td><span id="state"></span></td>
