Added a favicon for starman web app

--- a/firmware/main/assets/index.html
+++ b/firmware/main/assets/index.html
@@ -4,6 +4,9 @@
         <title>Starman</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
         <meta name="apple-mobile-web-app-capable" content="yes" />
+        <link rel="icon" type="image/x-icon" href="/favicon.png" />
+        <link rel="shortcut icon" href="/favicon.png" />
+        <link rel="apple-touch-icon" href="/favicon.png" />
         <link rel="stylesheet" type="text/css" href="/style.css" />
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
         <script src="/starman.js" type="text/javascript"></script>
