--- a/firmware/main/assets/index.html
+++ b/firmware/main/assets/index.html
@@ -8,7 +8,7 @@
         <link rel="shortcut icon" href="/favicon.png" />
         <link rel="apple-touch-icon" href="/favicon.png" />
         <link rel="stylesheet" type="text/css" href="/style.css" />
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
+        <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
         <script src="/starman.js" type="text/javascript"></script>
     </head>
     <body>
